# agentic-team

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  sample-tasks.md
.github/workflows/: docs.yml  publish.yml
demo/: compare-providers-audit.tape  compare-providers.md  compare-providers.tape  demo.tape  lead-workflow.md  tasks.md
docs/: architecture.md  commands.md  examples.md  getting-started.md  index.md  multiple-teams.md  operations.md  providers.md  task-files.md
docs/development/: team-prompt-design.md
skills/: team.md
src/agentic_team/: __init__.py  _pane_fit.py  agents.py  cli.py  config.py  models.py  names.py  status.py  taskfile.py  tmux.py
tests/: conftest.py  test_agents.py  test_cli_commands.py  test_cli_init.py  test_cli_prompt.py  test_cli_routing.py  test_cli_run.py  test_cli_spawn.py  test_config.py  test_efficiency.py  test_models.py  test_names.py  test_robustness.py  test_status.py  test_taskfile.py  test_tmux.py
tests/samples/: claude_interactive_idle.txt  claude_interactive_working.txt  claude_oneshot_done.txt  claude_oneshot_error.txt  claude_session_id.txt  claude_waiting_approval.txt  codex_interactive_idle.txt  codex_interactive_working.txt  codex_waiting_confirm.txt  gemini_interactive_idle.txt  gemini_interactive_working.txt  gemini_waiting_confirm.txt
