[project]
name = "agentic-team"
version = "0.1.0"
description = "Orchestrate teams of AI coding agents in tmux"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli_w>=1.0",
]

[project.scripts]
team = "agentic_team.cli:app"
agentic-team = "agentic_team.cli:app"

[dependency-groups]
docs = [
    "zensical>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_team"]
